# os_lab_06

src/: CMakeCache.txt  CMakeLists.txt  Makefile  child  child.cpp  cmake_install.cmake  main.cpp  server.cpp  server.h  terminal
src/zeromq-4.2.2/: Makefile  config.status  libtool  zconf.h
src/zeromq-4.2.2/builds/: Makefile
src/zeromq-4.2.2/builds/msvc/: Makefile
src/zeromq-4.2.2/doc/: Makefile
src/zeromq-4.2.2/perf/: inproc_lat  inproc_thr  local_lat  local_thr  remote_lat  remote_thr
src/zeromq-4.2.2/perf/.libs/: inproc_lat  inproc_thr  local_lat  local_thr  remote_lat  remote_thr
src/zeromq-4.2.2/src/.deps/: src_libzmq_la-address.Plo  src_libzmq_la-client.Plo  src_libzmq_la-ctx.Plo  src_libzmq_la-curve_client.Plo  src_libzmq_la-curve_server.Plo  src_libzmq_la-dealer.Plo  src_libzmq_la-decoder_allocators.Plo  src_libzmq_la-devpoll.Plo  src_libzmq_la-dgram.Plo  src_libzmq_la-dish.Plo  src_libzmq_la-dist.Plo  src_libzmq_la-epoll.Plo  src_libzmq_la-err.Plo  src_libzmq_la-fq.Plo  src_libzmq_la-gather.Plo  src_libzmq_la-io_object.Plo  src_libzmq_la-io_thread.Plo  src_libzmq_la-ip.Plo  src_libzmq_la-ipc_connecter.Plo  src_libzmq_la-ipc_listener.Plo  src_libzmq_la-kqueue.Plo  src_libzmq_la-lb.Plo  src_libzmq_la-mailbox.Plo  src_libzmq_la-mailbox_safe.Plo  src_libzmq_la-mechanism.Plo  src_libzmq_la-metadata.Plo  src_libzmq_la-msg.Plo  src_libzmq_la-mtrie.Plo  src_libzmq_la-null_mechanism.Plo  src_libzmq_la-object.Plo  src_libzmq_la-options.Plo  src_libzmq_la-own.Plo  src_libzmq_la-pair.Plo  src_libzmq_la-pipe.Plo  (+50 more)
src/zeromq-4.2.2/tools/: curve_keygen
(+3 files in other folders)
